yaml_files/registry_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-registry
  namespace: book-author
spec:
  type: NodePort
  selector:
    app: local-docker-registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30500  # You can change this if needed
